added swagger, added parallel processing with common fork join pool, added autonomous processes with @Scheduled, added explicit Async task scheduler