@@ -6,10 +6,32 @@ Simple self-running test jar to use in load test environments to tune and explor
 
 # afterburner-java
 
-# Start
+# start
 Start in the afterburner-java directory:
     
     mvn spring-boot:run
+    
+Or build or download an executable jar and run with java, so you can also change jvm settings such as the garbage collector:
+
+    java -jar target/afterburner-java-1.1-SNAPSHOT-exec.jar
+    
+With gc log enabled:
+    
+    java -jar -Xlog:gc:file=gc.log:time,uptime target/afterburner-java-1.1-SNAPSHOT-exec.jar 
+    
+Download a ready build afterburner here: https://github.com/stokpop/afterburner/releases 
+
+# test
+Default port number is 8080, so test if it is working using curl:
+    
+    curl http://localhost:8080/delay
+    
+Most examples below can be run with curl. Or check out swagger for the calls with parameters.
+    
+# swagger
+The swagger-ui is here after starting afterburner:
+
+    http://localhost:8080/swagger-ui.html#/
     
 # functions
 
@@ -24,6 +46,7 @@ Examples:
 * `/delay?duration=150` delay for 150 millis
 
 ## memory
+
 Call this endpoint to increase memory usage to simulate a memory leak or to generate lots of young objects for each request (churn). 
 
 If you increase the memory usage continuously or with a high number of objects you will likely see a OutOfMemory related issues.
@@ -41,6 +64,7 @@ Examples for memory churn:
 * `/memory/churn?objects=1818&duration=200` creates 1818 objects and sleeps for 200 milliseconds
 
 ## cpu
+
 Call this endpoint to burn some cpu cycles using matrix calculations.
 You can perform an identity check on a simple magic square. 
 
@@ -57,6 +81,7 @@ Examples:
 * `/cpu/magic-identity-check?matrixSize=0` get a 500 error (might also be handy for testing)
 
 ## remote call
+
 Call another remote http(s) endpoint. Use `path` to specify the path to be called on the remote
 instance. 
 
@@ -74,6 +99,7 @@ Examples:
 note: do not forget to escape & with a backslash using bash and curl
 
 ## remote call async
+
 Call many remote http(s) endpoint in parallel using `@Async` method.
 
 Works the same as the remote call above with the addition of how many times
@@ -88,6 +114,7 @@ A custom thread executor pool is created that also registers itself with microme
 This way the executor can be monitored on tasks in the queue and number of threads in use.
 
 ## upload file
+
 Upload a file to the java tmp directory (be careful not to fill that directory :-).
 
 Example:
@@ -101,7 +128,7 @@ Show latency of connecting to a database using a simple query on a Springboot te
 The default query is 'SELECT 1' and can be changed via the `afterburner.database.connect.query` property.
 
 Example:
-* `curl http://localhost:8080/db/connect`
+* `/db/connect`
 
 Example output:
    
@@ -115,16 +142,41 @@ some Java related overhead, such as possible gc times and Java security manager
 checks in the Socket code.
 
 Example: 
-* `curl http://localhost:8080/tcp/connect?host=www.google.com\&port=80\&timeout-ms=1000`
+* `/tcp/connect?host=www.google.com\&port=80\&timeout-ms=1000`
 
 Example output:
 
     {"message":"{ 'tcp-connect':'success', 'connect-duration-nanos':5281882, 'close-duration-nanos':39150, 'host':'www.google.com', 'port':80 }","name":"Afterburner-One","durationInMillis":6}
- 
 
+## parallel
+
+The parallel call will determine prime numbers via a parallel stream, which uses the implicit ForkJoinPool.
+
+Use this to test behaviour of a busy FJP. 
+
+Example:
+* `/parallel` runs prime number check in parallel using the common join fork pool
+* `/parallel-info` print metrics of the common join fork pool
+
+## autonomous worker
+
+Use the autonomous worker to investigate the behaviour of @Schedule.
+
+Two methods are in place, one with a fixedRate schedule and one with a fixedDelay schedule.
+
+# load test
+To run a gatling load test, go to the `afterburner-loadtest-gatling` directory and run:
+
+    mvn events-gatling:test
+    
+To run a jmeter load test, go to the `afterburner-loadtest-jmeter` directory and run:
+
+    mvn clean verify
+     
 # properties
 * `-Dafterburner.name=Angry-Afterburner` provide a name for the instance
 * `-Dafterburner.remote.call.base_url=https://my.remote.site:1234` connect remote calls to this base url
+* `-Dafterburner.autonomous.worker.stability=false` default the autonomous worker is stable, make it unstable by setting this to false
 * `export AFTERBURNER_REMOTE_CALL_BASE_URL=https://my.remote.site:1234` provide base url via environment variable
 * `--server.port=8090` use different port (default 8080)
 * `export SERVER_PORT=8090` use different port via env variable
